--- a/style.css
+++ b/style.css
@@ -46,6 +46,23 @@ html, body #fullheight {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
 
+}
+
+.item {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 100px;
+    color: white;
+    border-radius: 100%;
+    width: 210px;
+    height: 210px;
+    padding: 10px;
+    cursor: pointer;
+    align-self: center;
+    justify-self: center;
 
 
 }
+
