--- a/style.css
+++ b/style.css
@@ -13,43 +13,34 @@ html, body #fullheight {
 }
 
 .container {
-
     height: 100%;
     background-color: black;
 
 }
 
 .result {
-
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
     color: white;
     height: 39%;
-
 }
 
 .result span{
-
-    margin-right: 60%;
+    margin-right: 60px;
     font-size: 210px;
     justify-self: flex-end;
-
-
 }
 
 .buttons {
-
     width: 100%;
     height: 60%;
     background-color: black;
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
-
 }
 
 .item {
-
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,7 +53,47 @@ html, body #fullheight {
     cursor: pointer;
     align-self: center;
     justify-self: center;
-
-
 }
 
+.persent {
+    background-color: #A5A5A5;
+    border: none;
+    color: black;
+}
+
+.item1 {
+    background-color: #A5A5A5;
+    border: none;
+    color: black;
+}
+
+.item3{
+    background-color: #FF9F0A;
+    border: none;
+}
+
+.numbers, .comma{
+    background-color: #343434;
+    border: none;
+}
+.negative, .clear{
+    color: black;
+}
+
+.itemzero {
+    background-color: #343434;
+    width: 435px;
+    border-radius: 135px;
+    grid-column: span 2;
+    border: none;
+}
+
+.selectedSigh{
+    background-color: white;
+    color: #FF9F0A;
+}
+
+.changedStyles {
+    font-size: 10px;
+
+}
