--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ html, body #fullheight {
     justify-self: center;
 }
 
-.persent {
+.percent {
     background-color: #A5A5A5;
     border: none;
     color: black;
