--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ html, body #fullheight {
     height: 100%;
     font-family: Arial, Helvetica, sans-serif;
     background-color: black;
-
 }
 
 .container {
@@ -80,7 +79,7 @@ html, body #fullheight {
     color: black;
 }
 
-.itemzero {
+.itemZero {
     background-color: #343434;
     width: 435px;
     border-radius: 135px;
